[gd_scene load_steps=37 format=3 uid="uid://b5rud87wpls6h"]

[ext_resource type="Script" path="res://Scripts/restaurante.gd" id="1_ebi03"]
[ext_resource type="Script" path="res://Scripts/CameraScripts/camera_2d.gd" id="1_rpvgp"]
[ext_resource type="Texture2D" uid="uid://cdg5630onoly7" path="res://Assests/mapa_RU_Accets/mapa-ru_0000_chão.png" id="5_lqom8"]
[ext_resource type="Texture2D" uid="uid://dnuhm56mhuqyw" path="res://Assests/mapa_RU_Accets/mapa-ru_0006_fundo-Lado-de-fora.png" id="6_ruc5r"]
[ext_resource type="Texture2D" uid="uid://dtk8tagpbfy8c" path="res://Assests/mapa_RU_Accets/mapa-ru_0005_fundo.png" id="7_urmir"]
[ext_resource type="Texture2D" uid="uid://mh02rupxr4n5" path="res://Assests/mapa_RU_Accets/mapa-ru_0004_Luz-Atras.png" id="8_qqqwq"]
[ext_resource type="Texture2D" uid="uid://damkoxku2wqyk" path="res://Assests/mapa_RU_Accets/mapa-ru_0003_LuzFrente.png" id="9_tr0sr"]
[ext_resource type="Texture2D" uid="uid://s4i015lcxgs4" path="res://Assests/mapa_RU_Accets/mapa-ru_0002_Cadeiras-tras.png" id="10_n6xjh"]
[ext_resource type="Texture2D" uid="uid://csvi57huyhf3j" path="res://Assests/mapa_RU_Accets/mapa-ru_0001_cadeiras-Frente.png" id="11_gd43u"]
[ext_resource type="Texture2D" uid="uid://dkooywpymfl4q" path="res://Assests/hud/novahuf/HUDPreta.png" id="12_xt4ks"]
[ext_resource type="Script" path="res://Scripts/HUD/Tempo.gd" id="13_7sosk"]
[ext_resource type="FontFile" uid="uid://0yoxe4ykxfco" path="res://Assests/Fontes/DeltaBlock-Regular.ttf" id="14_0hccy"]
[ext_resource type="Script" path="res://Scripts/HUD/Barras.gd" id="15_qktex"]
[ext_resource type="Texture2D" uid="uid://by0g820gl2qjr" path="res://Assests/hud/novahuf/vida vazia left.png" id="16_tdxft"]
[ext_resource type="Texture2D" uid="uid://d4d1umvv60cht" path="res://Assests/hud/novahuf/efeito dano left.png" id="17_7kedm"]
[ext_resource type="Texture2D" uid="uid://c5i1uypbpyobf" path="res://Assests/hud/novahuf/vida cheia left.png" id="18_p37k2"]
[ext_resource type="Texture2D" uid="uid://b1pwpka8tut2y" path="res://Assests/hud/novahuf/vida vazia.png" id="19_bpt2x"]
[ext_resource type="Texture2D" uid="uid://v16dl5gchjvm" path="res://Assests/hud/novahuf/efeito dano right.png" id="20_d2lfa"]
[ext_resource type="Texture2D" uid="uid://duf5co7h33yux" path="res://Assests/hud/novahuf/vida Cheia.png" id="21_do7g6"]
[ext_resource type="Texture2D" uid="uid://dsit3lip5ylig" path="res://Assests/hud/novahuf/poder vazio.png" id="22_g311k"]
[ext_resource type="Texture2D" uid="uid://dplhss7bi5pqf" path="res://Assests/hud/novahuf/poder cheio.png" id="23_gnln7"]
[ext_resource type="PackedScene" uid="uid://ckyh3xfiqt07t" path="res://Cenas/pauseMenu.tscn" id="23_se4nb"]
[ext_resource type="Texture2D" uid="uid://bycv44yhknle8" path="res://Assests/menu main/subMenuSelecaoDePersonagem/selecaoDePersongemBtns/BtnsL/PedroBtn.png" id="24_c2v8x"]
[ext_resource type="Script" path="res://Scripts/HUD/Infosplayers.gd" id="24_ooatb"]
[ext_resource type="Texture2D" uid="uid://cmm54xk0ehm1d" path="res://Assests/menu main/subMenuSelecaoDePersonagem/selecaoDePersongemBtns/BtnsR/neemBtn.png" id="25_x3ugo"]
[ext_resource type="Script" path="res://Scripts/HUD/Round.gd" id="27_jsho8"]
[ext_resource type="Script" path="res://Scripts/PlayerScripts/Player1Spawner.gd" id="27_qdop1"]
[ext_resource type="Texture2D" uid="uid://dmcm5vdkghup1" path="res://Assests/hud/bolinha hud.png" id="28_ueybg"]
[ext_resource type="Texture2D" uid="uid://dev6f2e7hn7n8" path="res://Assests/hud/1.png" id="29_bgmht"]
[ext_resource type="Texture2D" uid="uid://bgflf8qn73ijt" path="res://Assests/hud/2.png" id="30_64nkc"]
[ext_resource type="Texture2D" uid="uid://dlixrapcpje7" path="res://Assests/hud/3.png" id="31_8ugex"]
[ext_resource type="Texture2D" uid="uid://c0e6n35pfuqfx" path="res://Assests/hud/FIGHT.png" id="32_m6sdq"]

[sub_resource type="Environment" id="Environment_2sxed"]
background_mode = 3
background_energy_multiplier = 2.8
ambient_light_energy = 0.0
glow_enabled = true
glow_intensity = 0.53
glow_strength = 1.77
glow_blend_mode = 1
glow_hdr_threshold = 1.13
glow_hdr_scale = 4.0
glow_hdr_luminance_cap = 93.19
glow_map_strength = 0.71

[sub_resource type="RectangleShape2D" id="RectangleShape2D_geqs2"]
size = Vector2(247, 992)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aipy4"]
size = Vector2(1727, 128)

[sub_resource type="GDScript" id="GDScript_y43rk"]
script/source = "extends Label

var already_added = false #verifica se o nome do player já foi inserido
# Called when the node enters the scene tree for the first time.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	text = \"ROUND \" + str(Global.round)
"

[node name="Restaurante" type="Node2D"]
script = ExtResource("1_ebi03")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_2sxed")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -91.89)
zoom = Vector2(0.89, 0.89)
limit_left = -630
limit_right = 1945
limit_bottom = 1200
script = ExtResource("1_rpvgp")
margin = Vector2(0, 0)

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2(-222, 11)

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(-234, -77)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(2340.36, 466)
shape = SubResource("RectangleShape2D_geqs2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(-541, 427)
shape = SubResource("RectangleShape2D_geqs2")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Chão" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(820, 226.03)
scale = Vector2(2.45762, 2.48784)
texture = ExtResource("5_lqom8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(809, 1191.61)
scale = Vector2(-1.87, -1.87)
shape = SubResource("RectangleShape2D_aipy4")

[node name="Background" type="ParallaxBackground" parent="."]

[node name="05 lado fora" type="ParallaxLayer" parent="Background"]
texture_repeat = 2
position = Vector2(-701.185, -88.94)
scale = Vector2(1.42, 1.42)
motion_scale = Vector2(0.3, 1)

[node name="Fundo05" type="Sprite2D" parent="Background/05 lado fora"]
position = Vector2(1319, 424.294)
scale = Vector2(1.87467, 1.71841)
texture = ExtResource("6_ruc5r")

[node name="04 galpão" type="ParallaxLayer" parent="Background"]
texture_repeat = 2
position = Vector2(-237, 101)
motion_scale = Vector2(0.4, 1)

[node name="Fundo04" type="Sprite2D" parent="Background/04 galpão"]
position = Vector2(1284, 322)
scale = Vector2(2.18069, 1.96861)
texture = ExtResource("7_urmir")

[node name="03 luz traz" type="ParallaxLayer" parent="Background"]
visible = false
texture_repeat = 2
position = Vector2(-237, 101)
motion_scale = Vector2(0.5, 1)

[node name="Fundo03" type="Sprite2D" parent="Background/03 luz traz"]
position = Vector2(1062, 431)
scale = Vector2(1.74876, 1.74876)
texture = ExtResource("8_qqqwq")

[node name="02 luz frente" type="ParallaxLayer" parent="Background"]
visible = false
texture_repeat = 2
position = Vector2(277, 771)
motion_scale = Vector2(0.6, 1)

[node name="Fundo02" type="Sprite2D" parent="Background/02 luz frente"]
position = Vector2(635, -295.51)
scale = Vector2(1.41122, 1.41122)
texture = ExtResource("9_tr0sr")

[node name="09 cadeiras fundo2" type="ParallaxLayer" parent="Background"]
texture_repeat = 2
position = Vector2(-237, 101)
motion_scale = Vector2(0.5, 1)

[node name="fundo09" type="Sprite2D" parent="Background/09 cadeiras fundo2"]
position = Vector2(1031.42, 634.49)
scale = Vector2(1.567, 1.567)
texture = ExtResource("10_n6xjh")

[node name="09 cadeiras fundo" type="ParallaxLayer" parent="Background"]
texture_repeat = 2
position = Vector2(-237, 101)
motion_scale = Vector2(0.6, 1)

[node name="fundo09" type="Sprite2D" parent="Background/09 cadeiras fundo"]
position = Vector2(1021, 737.615)
scale = Vector2(1.857, 1.857)
texture = ExtResource("10_n6xjh")

[node name="10 cadeiras frente" type="ParallaxLayer" parent="Background"]
texture_repeat = 2
position = Vector2(-237, 101)
motion_scale = Vector2(0.7, 1)

[node name="Sprite2D" type="Sprite2D" parent="Background/10 cadeiras frente"]
position = Vector2(1203.84, 846.81)
scale = Vector2(2.137, 2.137)
texture = ExtResource("11_gd43u")

[node name="11" type="ParallaxLayer" parent="Background"]
texture_repeat = 2
position = Vector2(-237, 101)
motion_scale = Vector2(0.7, 1)

[node name="Sprite2D" type="Sprite2D" parent="Background/11"]
position = Vector2(990.64, 328)
scale = Vector2(1.97213, 1.97213)
texture = ExtResource("5_lqom8")

[node name="Control" parent="." instance=ExtResource("23_se4nb")]

[node name="Players" type="Node2D" parent="."]
script = ExtResource("27_qdop1")

[node name="MarkPlayer1" type="Marker2D" parent="Players"]
position = Vector2(-132, 475)

[node name="MarkPlayer2" type="Marker2D" parent="Players"]
position = Vector2(1375, 480)

[node name="HUD" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -680.0
offset_top = 29.0
offset_right = 660.0
offset_bottom = 100.0
grow_horizontal = 2
scale = Vector2(1.02, 1.02)
size_flags_horizontal = 4
texture = ExtResource("12_xt4ks")

[node name="Tempo" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -17.0
offset_top = 46.16
offset_right = 23.0
offset_bottom = 65.16
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("13_7sosk")

[node name="clocktimer" type="Timer" parent="HUD/Tempo"]

[node name="MarginContainer" type="MarginContainer" parent="HUD/Tempo"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.56
anchor_bottom = 1.0
offset_left = -27.6
offset_top = -33.66
offset_right = 30.0
offset_bottom = 25.84
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 8

[node name="Tempo_container" type="HBoxContainer" parent="HUD/Tempo/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Tempo_label" type="Label" parent="HUD/Tempo/MarginContainer/Tempo_container"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("14_0hccy")
theme_override_font_sizes/font_size = 70
text = "90
"

[node name="Barras" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("15_qktex")

[node name="timerbarra" type="Timer" parent="HUD/Barras"]

[node name="EF_BarraVidaPlayer1" type="TextureProgressBar" parent="HUD/Barras"]
layout_mode = 0
offset_left = 355.0
offset_top = 66.0
offset_right = 890.0
offset_bottom = 91.0
scale = Vector2(1.045, 1.045)
value = 100.0
texture_under = ExtResource("16_tdxft")
texture_progress = ExtResource("17_7kedm")

[node name="BarraVidaPlayer1" type="TextureProgressBar" parent="HUD/Barras"]
layout_mode = 0
offset_left = 355.0
offset_top = 66.0
offset_right = 891.0
offset_bottom = 91.0
scale = Vector2(1.045, 1.045)
value = 100.0
texture_progress = ExtResource("18_p37k2")

[node name="EF_BarraVidaPlayer2" type="TextureProgressBar" parent="HUD/Barras"]
layout_mode = 0
offset_left = 1012.0
offset_top = 66.0
offset_right = 1548.0
offset_bottom = 91.0
scale = Vector2(1.045, 1.045)
value = 100.0
fill_mode = 1
texture_under = ExtResource("19_bpt2x")
texture_progress = ExtResource("20_d2lfa")

[node name="BarraVidaPlayer2" type="TextureProgressBar" parent="HUD/Barras"]
layout_mode = 0
offset_left = 1011.0
offset_top = 66.0
offset_right = 1547.0
offset_bottom = 91.0
scale = Vector2(1.045, 1.045)
value = 100.0
fill_mode = 1
texture_progress = ExtResource("21_do7g6")

[node name="Power_Player1" type="TextureProgressBar" parent="HUD/Barras"]
layout_mode = 0
offset_left = 280.0
offset_top = 109.0
offset_right = 861.0
offset_bottom = 119.0
scale = Vector2(1.05, 1.05)
max_value = 60.0
texture_under = ExtResource("22_g311k")
texture_progress = ExtResource("23_gnln7")

[node name="Power_Player2" type="TextureProgressBar" parent="HUD/Barras"]
layout_mode = 0
offset_left = 1039.0
offset_top = 109.0
offset_right = 1620.0
offset_bottom = 119.0
scale = Vector2(1.045, 1.045)
max_value = 60.0
fill_mode = 1
texture_under = ExtResource("22_g311k")
texture_progress = ExtResource("23_gnln7")

[node name="InfosPlayer" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("24_ooatb")

[node name="NomePlayer1" type="Label" parent="HUD/InfosPlayer"]
layout_mode = 0
offset_left = 366.0
offset_top = 43.0
offset_right = 568.0
offset_bottom = 85.0
scale = Vector2(0.709, 0.552)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.992157, 0, 0, 1)
theme_override_fonts/font = ExtResource("14_0hccy")
theme_override_font_sizes/font_size = 35
text = "Michel
"

[node name="NomePlayer2" type="Label" parent="HUD/InfosPlayer"]
layout_mode = 0
offset_left = 1401.0
offset_top = 43.0
offset_right = 1620.0
offset_bottom = 124.0
scale = Vector2(0.709, 0.552)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.992157, 0, 0, 1)
theme_override_fonts/font = ExtResource("14_0hccy")
theme_override_font_sizes/font_size = 35
text = "Neemias
"
horizontal_alignment = 2

[node name="FotoPlayer1" type="TextureRect" parent="HUD/InfosPlayer"]
layout_mode = 0
offset_left = 279.0
offset_top = 26.0
offset_right = 374.0
offset_bottom = 121.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("24_c2v8x")

[node name="FotoPlayer2" type="TextureRect" parent="HUD/InfosPlayer"]
layout_mode = 0
offset_left = 1571.0
offset_top = 26.0
offset_right = 1666.0
offset_bottom = 121.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("25_x3ugo")
flip_h = true

[node name="Round" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("27_jsho8")

[node name="Round_player1_1" type="TextureRect" parent="HUD/Round"]
layout_mode = 0
offset_left = 859.0
offset_top = 17.0
offset_right = 899.0
offset_bottom = 57.0
texture = ExtResource("28_ueybg")

[node name="Round_player1_2" type="TextureRect" parent="HUD/Round"]
layout_mode = 0
offset_left = 813.0
offset_top = 17.0
offset_right = 853.0
offset_bottom = 57.0
texture = ExtResource("28_ueybg")

[node name="Round_player2_1" type="TextureRect" parent="HUD/Round"]
layout_mode = 0
offset_left = 1023.0
offset_top = 17.0
offset_right = 1063.0
offset_bottom = 57.0
texture = ExtResource("28_ueybg")

[node name="Round_player2_2" type="TextureRect" parent="HUD/Round"]
layout_mode = 0
offset_left = 1070.0
offset_top = 17.0
offset_right = 1110.0
offset_bottom = 57.0
texture = ExtResource("28_ueybg")

[node name="1" type="TextureRect" parent="HUD/Round"]
layout_mode = 0
offset_left = 781.0
offset_top = 214.0
offset_right = 1281.0
offset_bottom = 714.0
scale = Vector2(0.732345, 0.732345)
texture = ExtResource("29_bgmht")

[node name="2" type="TextureRect" parent="HUD/Round"]
layout_mode = 0
offset_left = 781.0
offset_top = 214.0
offset_right = 1281.0
offset_bottom = 714.0
scale = Vector2(0.732345, 0.732345)
texture = ExtResource("30_64nkc")

[node name="3" type="TextureRect" parent="HUD/Round"]
layout_mode = 0
offset_left = 781.0
offset_top = 214.0
offset_right = 1281.0
offset_bottom = 714.0
scale = Vector2(0.732345, 0.732345)
texture = ExtResource("31_8ugex")

[node name="Fight" type="TextureRect" parent="HUD/Round"]
layout_mode = 0
offset_left = 781.0
offset_top = 214.0
offset_right = 1281.0
offset_bottom = 714.0
scale = Vector2(0.732345, 0.732345)
texture = ExtResource("32_m6sdq")

[node name="round" type="Label" parent="HUD/Round"]
layout_mode = 0
offset_left = 887.0
offset_top = 103.0
offset_right = 1106.0
offset_bottom = 184.0
scale = Vector2(0.709, 0.552)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("14_0hccy")
theme_override_font_sizes/font_size = 35
text = "ROUND 
"
horizontal_alignment = 1
script = SubResource("GDScript_y43rk")

[connection signal="timeout" from="HUD/Tempo/clocktimer" to="HUD/Tempo" method="_on_clocktimer_timeout"]
